# unagi

./: .gitignore  Cargo.toml
migrations/: 20210618113327_initial_setup.down.sql  20210618113327_initial_setup.up.sql
migrations/2020-12-01-222413_create_library/: down.sql  up.sql
migrations/2020-12-04-025833_create_shows/: down.sql  up.sql
migrations/2020-12-05-215649_create_episodes/: down.sql  up.sql
migrations/2020-12-10-112533_remove_image_episode/: down.sql  up.sql
migrations/2020-12-16-095938_add_show_and_episode_info/: down.sql  up.sql
migrations/2020-12-27-154604_make_episode_name_not_null/: down.sql  up.sql
src/: errors.rs  main.rs  schema.rs
src/api/: bridge.rs  mod.rs
src/api/anilist/: query.graphql  search.rs
src/api/anilist/fetch/: fetch.rs  query.graphql
src/api/kitsu/: search.rs  seasons.rs
src/data/: api.rs  bridge.rs  mod.rs  utils.rs
src/data/anilist/: anilist.rs  fetch.graphql  schema.graphql  search.graphql
src/data/anilist/fetch/: fetch.rs  query.graphql
src/data/anilist/search/: query.graphql  search.rs
src/data/kitsu/: mod.rs  search.rs
src/db/: episodes.rs  library.rs  mod.rs  shows.rs
src/handlers/: files.rs  library.rs  mod.rs  montage.rs  transcode.rs
src/models/: episode.rs  library.rs  mod.rs  show.rs
src/route/: config.rs  library.rs  mod.rs
src/routes/: episodes.rs  fetch.rs  files.rs  library.rs  mod.rs  shows.rs
src/services/: files.rs  mod.rs  transcode.rs
