[package]
name = "denki"
version = "0.1.0"
authors = ["samyak-jain <samtan106@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
diesel = { version = "1.4.5", features = ["postgres", "uuidv07"] }
dotenv = "0.15.0"
validator = { version = "0.12", features = ["derive"] }
serde = "1.0.117"
serde_json = "1.0"
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
simple-error = "0.2.2"
anitomy = "0.1.2"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
graphql_client = "0.9.0"
lazy_static = "1.4.0"
config = "0.10.1"
regex = "1.4.2"
shared_child = "0.3.4"

[dependencies.rocket_contrib]
version = "0.5.0-dev"
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json", "diesel_postgres_pool", "uuid"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
