[package]
name = "unagi"
version = "0.1.0"
license-file = "LICENSE"
description = "A media library server written in Rust"
repository = "https://github.com/samyak-jain/capelin"
authors = ["samyak-jain <samtan106@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "1.4.5", features = ["postgres", "uuidv07"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid"] }
dotenv = "0.15.0"
validator = { version = "0.12", features = ["derive"] }
serde = "1.0.117"
serde_json = "1.0"
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
simple-error = "0.2.2"
anitomy = "0.1.2"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
graphql_client = "0.9.0"
config = "0.10.1"
regex = "1.4.2"
shared_child = "0.3.4"
quick-xml = { version = "0.20.0", features = [ "serialize" ] }
static-http-cache = { version = "0.3.0", git = "https://github.com/Matthias-Fauconneau/static-http-cache" }
rand = "0.7.3"
dotenv_codegen = "0.15.0"
anyhow = "1.0.41"
dirs = "3.0.2"
kv = "0.22.0"
async-trait = "0.1.50"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["postgres_pool"]

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"

[profile.release]
panic = "unwind"
